--- a/src/main/javascript/sdk1.7.1/html/sdk/assets/css/styles.css
+++ b/src/main/javascript/sdk1.7.1/html/sdk/assets/css/styles.css
@@ -131,3 +131,32 @@
         background-color: Azure;
         font-family: 'Courier New';
     } 
+    
+     #loader {
+      display: table-cell;
+	  margin-top: 15px;
+      margin-bottom: 15px;
+	  margin: -75px 0 0 -75px;
+	  border: 16px solid #f3f3f3;
+	  border-radius: 50%;
+	  border-top: 16px solid #3498db;
+	  width: 120px;
+	  height: 120px;
+	  -webkit-animation: spin 2s linear infinite;
+	  animation: spin 2s linear infinite;
+	}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+#myDiv {
+  display: none;
+  text-align: center;
+} 
